--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html><html lang="en" dir="ltr"><head>
-    <meta charset="utf-8">
-    <title>project_20(by:Aashman_Thakur)</title>
-    <script src="p5.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="p5.play.js"></script>
-    <script src="sketch.js"></script>
-  </head>
-  <body>
+<!DOCTYPE html>
+  <html lang="">
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Supply Mission</title>
+      <style> body {padding: 0; margin: 0;} </style>
+      <script src="matter.js"></script>
+      <script src="p5.js"></script>
+      <script src="p5.play.js"></script>
 
-  
+      <script src="sketch.js"></script>
 
-</body></html>
+    </head>
+    <body>
+    </body>
+  </html>
